Update add rate limiting and category